# qsample

./: Qsample - Basic correction.ipynb  Qsample - Flagged Steane with tableaux.ipynb  Qsample - Flagged Steane.ipynb  Qsample - PyMatching.ipynb  Qsample - STIM with Feedforward.ipynb  Qsample - Steane-tableaux.ipynb  Qsample - Steane-v2.ipynb  Qsample - Steane.ipynb  Qsample - Surface code.ipynb  Qsample - ghz-with tableaux.ipynb  Qsample - ghz.ipynb  Qsample - teleportation-Copy1.ipynb  Qsample - teleportation-with tableaux.ipynb  Qsample - teleportation.ipynb  circuit.py  core.html  core.html.md  index.html  index.html.md  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  stabilizer.py  stim_simulator.py
.github/workflows/: build-docs.yml
docs/: _quarto.yml
docs/_site/: search.json
docs/_site/examples/: GHZ.html  Steane.html  Surface_code.html  Teleportation.html
docs/examples/: GHZ.ipynb  Steane.ipynb  Surface_code.ipynb
examples/: GHZ.html  GHZ.md  PyMatching.html  PyMatching.md  steane.html  steane.html.md  surface_code.html  surface_code.html.md  teleportation.html  teleportation.html.md
nbs/: index.ipynb  nbdev.yml  sidebar.yml
nbs/examples/: PyMatching.ipynb  Steane.ipynb  Surface_code.ipynb  Teleportation.ipynb
qsample/: __init__.py  _modidx.py  circuit.py  circuit_test.py  math.py  noise.py  protocol.py
qsample/sampler/: subset.py  tree.py
qsample/sim/: mixin.py  stabilizer.py  stim_simulator.py  stim_simulator_B.py
