[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="qsample"
version = "0.0.1"
description = "Python library to sample from quantum circuits and protocols"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name="Joao Henrique Fontes"}]
keywords = ["nbdev", "jupyter", "python"]
dependencies = [
    "numpy>=1.24",
    "fastcore>=1.5",
    "nbdev>=2.3"
]

[project.optional-dependencies]
dev = ["pytest", "black"]
